tests/paczka1/small_fuzzy/73658585.err
Error in line 6: g4HNZRSK8j S448 8,4
Error in line 1: 2Jfe1 A411 97,8
